--- a/Assignment_1_1/Assignment_1_1.ipynb
+++ b/Assignment_1_1/Assignment_1_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,12 +37,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "## BEGIN CODE\n",
-    "\n",
+    "a=np.resize(arr,(20,50))\n",
     "## END CODE"
    ]
   },
@@ -55,12 +55,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "## BEGIN CODE\n",
-    "\n",
+    "b=np.transpose(arr)\n",
     "## END CODE"
    ]
   },
@@ -73,12 +73,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "## BEGIN CODE\n",
-    "\n",
+    "a=np.resize(arr,(20,50))\n",
+    "b=np.transpose(a)\n",
+    "arr_dot=np.dot(a,b)\n",
     "## END CODE"
    ]
   },
@@ -91,12 +93,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2365442.27809957 3002112.3995789  2779184.43777157 2477210.32440039\n",
+      " 2627759.87742664 2220803.79590608 2429710.18283941 2508044.22721641\n",
+      " 2459318.36600334 2325031.07739166 2896081.10050922 2762062.07921721\n",
+      " 2660473.74582437 2141287.18395127 2694809.41626161 2254508.32241154\n",
+      " 2480788.07237605 2727792.51946167 2586794.20382212 2681242.33967484]\n"
+     ]
+    }
+   ],
    "source": [
     "## BEGIN CODE\n",
-    "\n",
+    "c=arr_dot.sum(axis=1,dtype=float)\n",
+    "#print(c)\n",
     "## END CODE"
    ]
   },
@@ -109,12 +124,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1537.99944021 1732.66049749 1667.08861125 1573.91560269 1621.03666751\n",
+      " 1490.23615441 1558.75276514 1583.68059507 1568.2214021  1524.80525884\n",
+      " 1701.7876191  1661.94526962 1631.09587266 1463.31376811 1641.58746836\n",
+      " 1501.50202211 1575.05176816 1651.60301509 1608.35139314 1637.44995028]\n"
+     ]
+    }
+   ],
    "source": [
     "## BEGIN CODE\n",
-    "\n",
+    "d=np.sqrt(c)\n",
+    "#print(d)\n",
     "## END CODE"
    ]
   },
@@ -127,12 +154,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.98203514 -0.99739839  0.88988262  0.0223149  -0.02513909  0.90063852\n",
+      "  0.49931585  0.31257026 -0.53682381 -0.90561256 -0.81665967 -0.04274285\n",
+      " -0.57228164 -0.61973772  0.99446036 -0.17830768 -0.89740342 -0.76736444\n",
+      " -0.14354788 -0.62893124]\n"
+     ]
+    }
+   ],
    "source": [
     "## BEGIN CODE\n",
-    "\n",
+    "e=np.sin(d)\n",
+    "#print(e)\n",
     "## END CODE"
    ]
   },
@@ -145,16 +184,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Assign the name of the variable containing the final matrix to VARIABLE_NAME variable.\n",
     "\n",
-    "VARIABLE_NAME = \n",
+    "VARIABLE_NAME = e\n",
     "with open('submission.pickle', 'wb') as p:\n",
     "    pickle.dump(VARIABLE_NAME, p)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
